--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.2",
@@ -14,6 +15,7 @@
     "axios": "^1.2.3",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "jest": "^26.6.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
@@ -24,8 +26,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/jest-native": "^5.4.0",
+    "@testing-library/react-native": "^11.4.0",
+    "@types/jest": "^29.2.6",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "jest": "^29.3.0",
+    "jest-config": "^29.3.0",
+    "jest-expo": "^47.0.1",
+    "react-test-renderer": "18.1.0",
     "typescript": "^4.6.3"
   },
   "private": true
